# horizen-ballot

./: .gitignore  Cargo.toml  README.md
contracts/: HorizenBallotBox.sol
src/: lib.rs  session.rs  types.rs
